AVX enabled by default for Skylake even when unsupported

XMLWordPrintable

      The fix for jdk-8221092 causes UseAVX to default to 2 for Skylake server CPUs (CPUID Model 0x55) even in environments where AVX support is not enabled. This causes HotSpot to crash with an SIGILL.

      While the Skylake hardware may support several of the AVX extensions, AVX support is often disabled when using a hypervisor. For example, some older (but still officially supported) hypervisors do not have support for XSAVE and therefor disable AVX to ensure they do not corrupt anything. As another example, I was able to reproduce this crash by disabling nested paging on VirtualBox (which also results in AVX being disabled) and running "java -version".

      While this can be worked around by setting UseAVX=0, the fact that HotSpot now crashes OOTB in these environments is a serious regression that needs to be fixed.

            Assignee:
            David Buck
            Reporter:
            Shadow Bug
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: