8238596: AVX enabled by default for Skylake even when unsupported

Only default to UseAVX=2 when support is detected

Reviewed-by: shade, vlivanov